added mount points, ib support, firewall, sysusers

--- a/roles/login_build_vnfs/tasks/main.yml
+++ b/roles/login_build_vnfs/tasks/main.yml
@@ -12,34 +12,70 @@
    - name: copy resolve.conf into image
      copy: src=/etc/resolv.conf dest="{{ login_chroot_loc }}/etc/resolv.conf" #"
 
+#create slurm, ganglia, chrony with correct UIDs
+   - name: system user uid tasks
+     include: sys_user_tasks.yml
+     with_items: 
+      - "slurm"
+      - "ganglia"
+      - "chrony"
+
+
    - name: yum install into the image chroot
-     command: yum -y --installroot={{ login_chroot_loc }} install chrony kernel lmod-ohpc grub2 glibc-devel glibc-headers kernel-devel kernel-headers dkms
+     command: yum -y --installroot={{ login_chroot_loc }} install chrony kernel glibc-devel glibc-headers kernel-devel kernel-headers dkms ganglia-gmond-ohpc infinipath-psm infiniband-diags firewalld
 #" for vim
 
    - name: yum install slurm client into image
      command: yum -y --installroot={{ login_chroot_loc }} groupinstall ohpc-slurm-client
+
+   - name: yum install ohpc IB drivers
+     command: yum -y --installroot={{ compute_chroot_loc }} groupinstall "Infiniband Support"
+ 
+   - name: enable rdma
+     command: chroot "{{ compute_chroot_loc }}" systemctl enable rdma
+
 #" for vim
 #
 ##FIREWALL STUFF - DON'T LEAVE COMMENTED OUT
-#   - template: src=firewalld.conf dest={{ login_chroot_loc }}/etc/firewalld/firewalld.conf
-#
-#   - template: src=zones/firewall_public.xml.j2 dest={{ login_chroot_loc }}/etc/firewalld/zones/public.xml
-#
-#   - template: src=services/slurm.xml dest={{ login_chroot_loc }}/etc/firewalld/services/slurm.xml
-#
-#   - template: src=zones/firewall_internal.xml.j2 dest={{ login_chroot_loc }}/etc/firewalld/zones/internal.xml
+   - name: firewalld.conf template
+     template: src=firewalld.conf dest={{ login_chroot_loc }}/etc/firewalld/firewalld.conf
+
+   - name: firewall public zone template
+     template: src=zones/public.xml.j2 dest={{ login_chroot_loc }}/etc/firewalld/zones/public.xml
+
+   - name: firewall slurm service template
+     template: src=services/slurm.xml dest={{ login_chroot_loc }}/etc/firewalld/services/slurm.xml
+
+   - name: firewall internal zone template
+     template: src=zones/internal.xml.j2 dest={{ login_chroot_loc }}/etc/firewalld/zones/internal.xml
+
+   - name: define public ip config
+     copy: src=ifcfg-eth0 dest=/etc/sysconfig/network-scripts/ifcfg-eth0
+ 
+   - name: define private ip config
+     copy: src=ifcfg-eth1 dest=/etc/sysconfig/network-scripts/ifcfg-eth1
  
    - name: copy ssh keys over
      copy: src=cluster_root.pub dest={{ login_chroot_loc }}/root/.ssh/authorized_keys
 
+   - name: create software, scratch, data directories
+     file: name={{ item }} state=directory
+     with_items:
+      - "/software"
+      - "/data"
+      - "/scratch"
+
    - name: put NFS home mount info in image
-     lineinfile: line="{{ headnode_private_ip }}:/home /home nfs nfsvers=3,rsize=1024,wsize=1024,cto 0 0" dest={{ login_chroot_loc }}/etc/fstab state=present
+     lineinfile: line="{{ hnas_private_ip }}:/Clusterhome /home nfs rw,suid,dev,exec,nouser,sync 0 0" dest={{ compute_chroot_loc }}/etc/fstab state=present
 
-   - name: put NFS opt mount info in image
-     lineinfile: line="{{ headnode_private_ip }}:/opt/ohpc/pub /opt/ohpc/pub-master nfs nfsvers=3 0 0" dest={{ login_chroot_loc }}/etc/fstab state=present
+   - name: put NFS scratch mount info in image
+     lineinfile: line="{{ hnas_private_ip }}:/Clusterscratch /scratch nfs rw,suid,dev,exec,nouser,sync 0 0" dest={{ compute_chroot_loc }}/etc/fstab state=present
 
-   - name: put NFS opt mount info in image
-     lineinfile: line="{{ headnode_private_ip }}:/export /share nfs nfsvers=3 0 0" dest={{ login_chroot_loc }}/etc/fstab state=present
+   - name: put NFS software mount info in image
+     lineinfile: line="{{ hnas_private_ip }}:/Clustersoftware /software nfs rw,suid,dev,exec,nouser,sync 0 0" dest={{ compute_chroot_loc }}/etc/fstab state=present
+
+   - name: put NFS data mount info in image
+     lineinfile: line="{{ hnas_private_ip }}:/Clusterdata /data nfs rw,suid,dev,exec,nouser,sync 0 0" dest={{ compute_chroot_loc }}/etc/fstab state=present
 
    - name: chronyd on login image enabled 
      command: chroot '{{ login_chroot_loc }}' systemctl enable chronyd
@@ -47,29 +83,32 @@
    - name: add headnode to compute chrony.conf
      lineinfile: line="server {{ headnode_private_ip }}" dest={{ login_chroot_loc }}/etc/chrony.conf state=present
 
+   - name: pull root passwd from shadow into compute vnfs
+     shell: sed -i "s-^root.*-$(grep root /etc/shadow)-" {{ compute_chroot_loc }}/etc/shadow
+
    - name: wwimport file (gres.conf)
      command: wwsh file import /etc/slurm/gres.conf
 
-   - name: wwimport file (passwd)
+   - name: wwsh import file (passwd)
      command: wwsh file import /etc/passwd
 
-   - name: wwimport file (group)
+   - name: wwsh import file (group)
      command: wwsh file import /etc/group
 
-   - name: wwimport file (shadow)
+   - name: wwsh import file (shadow)
      command: wwsh file import /etc/shadow
 
-   - name: wwimport file (slurm)
+   - name: wwsh import file (slurm)
      command: wwsh file import /etc/slurm/slurm.conf
 
-   - name: wwimport file (munge)
+   - name: wwsh import file (munge)
      command: wwsh file import /etc/munge/munge.key
+
+   - name: gmond template
+     template: src=gmond.conf.j2 dest="{{ compute_chroot_loc }}/etc/ganglia/gmond.conf"
 
    - name: build bootstrap image
      shell: wwbootstrap {{ build_kernel_ver }}
- 
-   - name: fix export of usr/include
-     lineinfile: line="hybridize=''" dest=/etc/warewulf/vnfs/{{ login_chroot }}.conf state=present insertafter=EOF create=yes
 
    - name: build the vnfs 
      command: wwvnfs -y --chroot "{{ login_chroot_loc }}/"
@@ -83,7 +122,3 @@
 
    - name: set network file path
      command: wwsh -y file set network --path /etc/sysconfig/network --mode=0644 --uid=0
-
-   - name: add slurm.conf file to import
-     command: wwsh -y file import /etc/slurm/slurm.conf --name slurm.conf
-
