--- a/roles/login_build_vnfs/tasks/main.yml
+++ b/roles/login_build_vnfs/tasks/main.yml
@@ -22,7 +22,7 @@
      command: yum -y --installroot={{ login_chroot_loc }} groupinstall ohpc-slurm-client
 
    - name: yum install into the image chroot
-     command: yum -y --installroot={{ login_chroot_loc }} install chrony kernel lmod-ohpc grub2 glibc-devel glibc-headers kernel-devel kernel-headers dkms
+     command: yum -y --installroot={{ login_chroot_loc }} install chrony kernel lmod-ohpc grub2 glibc-devel glibc-headers kernel-devel kernel-headers dkms cifs-utils
 #" for vim
 
    - name: get the currently installed kernel
@@ -31,6 +31,15 @@
 
    - set_fact: 
          kernel_ver: '{{ kernel_ver_output.stdout }}'
+
+   - name: yum install xserver 
+     command: yum -y --installroot={{ login_chroot_loc }} groupinstall "X Window system"
+
+   - name: yum install additional development tools 
+     command: yum -y --installroot={{ login_chroot_loc }} group install "Development Tools"
+
+   - name: yum install xfce
+     command: yum -y --installroot={{ login_chroot_loc }} groupinstall xfce
 
 #" for vim
 #
@@ -47,14 +56,35 @@
    - name: copy ssh keys over
      copy: src=cluster_root.pub dest={{ login_chroot_loc }}/root/.ssh/authorized_keys
 
-   - name: put NFS home mount info in image
-     lineinfile: line="{{ headnode_private_ip }}:/home /home nfs nfsvers=3,rsize=1024,wsize=1024,cto 0 0" dest={{ login_chroot_loc }}/etc/fstab state=present
+#   - name: put NFS home mount info in image
+#     lineinfile: line="10.2.1.1:/home /home nfs nfsvers=3,rsize=1024,wsize=1024,cto 0 0" dest={{ login_chroot_loc }}/etc/fstab state=present
 
    - name: put NFS opt mount info in image
-     lineinfile: line="{{ headnode_private_ip }}:/opt/ohpc/pub /opt/ohpc/pub-master nfs nfsvers=3 0 0" dest={{ login_chroot_loc }}/etc/fstab state=present
+     lineinfile: line="10.2.1.1:/opt/ohpc/pub /opt/ohpc/pub nfs nfsvers=3 0 0" dest={{ login_chroot_loc }}/etc/fstab state=present
 
-   - name: put NFS opt mount info in image
-     lineinfile: line="{{ headnode_private_ip }}:/export /share nfs nfsvers=3 0 0" dest={{ login_chroot_loc }}/etc/fstab state=present
+#   - name: put NFS opt mount info in image
+#     lineinfile: line="10.2.1.1:/export /share nfs nfsvers=3 0 0" dest={{ login_chroot_loc }}/etc/fstab state=present
+
+   - name: copy files for syncing users
+     copy: src=/etc/create-cluster-users dest="{{ login_chroot_loc }}/etc/" mode=0700 #"
+
+   - name: copy sync task to cron.d
+     copy: src=syncusers dest="{{ login_chroot_loc }}/etc/cron.d/" mode=0400 #"
+
+   - name: create initial users
+     command: chroot '{{ login_chroot_loc }}' /etc/create-cluster-users/sync-users.sh 
+
+   - name: copy krb5.conf into image
+     copy: src=krb5.conf dest="{{ login_chroot_loc }}/etc/krb5.conf" #"
+
+   - name: yum install pam support for krb5 into the image chroot
+     command: yum -y --installroot={{ login_chroot_loc }} install pam_krb5
+
+   - name: enable krb5 authentication on login nodes 
+     command: chroot '{{ login_chroot_loc }}' authconfig --enablekrb5 --update
+
+   - name: autofs on compute image enabled 
+     command: chroot '{{ login_chroot_loc }}' systemctl enable autofs
 
    - name: copy configure keys for cluster users sh
      copy: src=cluster-env.sh dest="{{ login_chroot_loc }}/etc/profile.d/" mode=0644 #"
@@ -69,7 +99,7 @@
      command: chroot '{{ login_chroot_loc }}' systemctl enable chronyd
 
    - name: add headnode to compute chrony.conf
-     lineinfile: line="server {{ headnode_private_ip }}" dest={{ login_chroot_loc }}/etc/chrony.conf state=present
+     lineinfile: line="server 10.2.1.1" dest={{ login_chroot_loc }}/etc/chrony.conf state=present
 
    - name: wwimport file (gres.conf)
      command: wwsh file import /etc/slurm/gres.conf
@@ -83,12 +113,33 @@
    - name: wwimport file (shadow)
      command: wwsh file import /etc/shadow
 
+   - name: wwimport file into image (auto.master)
+     command: wwsh file import /etc/auto.master
+
+   - name: wwimport file into image (auto.home)
+     command: wwsh file import /etc/auto.home
+
+   - name: wwimport file into image (auto.share)
+     command: wwsh file import /etc/auto.share
+
    - name: wwimport file (slurm)
      command: wwsh file import /etc/slurm/slurm.conf
 
    - name: wwimport file (munge)
      command: wwsh file import /etc/munge/munge.key
 
+   - name: wwimport file into image (create-groups)
+     command: wwsh file import /etc/create-cluster-users/create-groups.sh --name create-groups.sh
+
+   - name: wwimport file into image (create-users)
+     command: wwsh file import /etc/create-cluster-users/create-users.sh --name create-users.sh
+
+   - name: wwimport file into image (populate-groups)
+     command: wwsh file import /etc/create-cluster-users/populate-groups.sh --name populate-groups.sh
+
+   - name: wwimport file into image (sync-users)
+     command: wwsh file import /etc/create-cluster-users/sync-users.sh --name sync-users.sh
+   
    - name: build bootstrap image
      shell: wwbootstrap --output=/tmp/login_'{{ kernel_ver }}'.wwbs  --chroot='{{ login_chroot_loc }}' '{{ kernel_ver }}' > /tmp/testlog
 
