--- a/roles/ohpc_install/tasks/main.yml
+++ b/roles/ohpc_install/tasks/main.yml
@@ -21,11 +21,8 @@
    - name: set the gres.conf on the master
      copy: src=gres.conf dest=/etc/slurm/gres.conf
 
-   - name: create the slurmacct log file
-     file: path=/var/log/slurmacct.log state=touch owner=slurm group=slurm
-
-   - name: insert rhel-xcbc WW template
-     copy: src=include-rhel-xcbc dest="{{ template_path }}include-rhel-xcbc"
+   - template: src=include-rhel-xcbc.j2 dest="{{ xcbc_template_path }}"
+# silly vim."
  
    - name: fix the warewulf wwsh script... ARGH (line 29)
      lineinfile: 
